--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-set (COMPONENT_SRCS "Doorbell.c")
+set (COMPONENT_SRCS "Doorbell.c" "images.c")
 set (COMPONENT_REQUIRES "ESP32-RevK" "ESP32-GFX" "QR")
 register_component ()
