--- a/images/Makefile
+++ b/images/Makefile
@@ -1,4 +1,4 @@
 all:	$(patsubst %.png,%.mono,$(wildcard *.png))
 
 %.mono:   %.png
-	convert $< -dither None -monochrome $@
+	convert $< -dither None -monochrome -rotate -90 -depth 1 GRAY:$@
