--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 set (COMPONENT_SRCS "Doorbell.c" "../settings.c")
-set (COMPONENT_REQUIRES "ESP32-RevK" "ESP32-GFX" "QR" "sdmmc" "driver")
+set (COMPONENT_REQUIRES "ESP32-RevK" "ESP32-GFX" "QR" "fatfs" "sdmmc" "driver")
 register_component ()
