--- a/.gitmodules
+++ b/.gitmodules
@@ -10,7 +10,7 @@
 	url = https://github.com/revk/ESP32-VL53L0X
 [submodule "PCBCase"]
 	path = PCBCase
-	url = https://github.com/revk/PCBCase
+	url = https://codeberg.org/RevK/PCBCase
 [submodule "components/ESP32-VL53L1X"]
 	path = components/ESP32-VL53L1X
 	url = https://github.com/revk/ESP32-VL53L1X
